2016-01-18  Danil Kutkevich  <danil@kutkevich.org>

        * fhir/crud.coffee (fhir_delete_resource, fhir_vread_resource):
        Makes "delete" more FHIR compliant (#65).

        * fhir/crud.coffee (fhir_read_resource): Read of the deleted
        resource returns OperationOutcome.
        Relying on this OperationOutcome's coding server can return the
        appropriate http status code (#65).

2016-01-17  Danil Kutkevich  <danil@kutkevich.org>

        * src/fhir/history.coffee (fhir_resource_history):
        `fhir_resource_history` respects `_count` and `_since` params (#63).

2016-01-13  Danil Kutkevich  <danil@kutkevich.org>

        * src/honey.coffee: Multi-tenant friendly database should hold all
        extensions-related-functions in one convientional schema
        "pg_catalog" (#75).

2016-01-10  Danil Kutkevich  <danil@kutkevich.org>

        * fhir/crud.coffee (fhir_create_resource, fhir_update_resource)
        (fhir_delete_resource): Logging of resources changes in meta-extensions:
        "fhir-request-method" and "fhir-request-uri" (#65).